Added functionality for starting and resetting timers, notification plays when timer stops

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,31 +1,34 @@
 :root {
-  padding: 0%;
   --background: #dad0d0;
   --backgroundFocus: #eAe0e0;
   --textMain: #20202A;
   --accent: #f24343;
   --secondary: #85db6c;
   --border: #8a6e6e;
-  --insetShadow: inset 0px 0px 2px var(--textMain);
-  background: transparent;
+}
 
+@font-face {
+  font-family: Nunito; /* set name */
+  src: url("/src-tauri/fonts/Nunito.ttf");
+}
+
+#StopTimer {
+  display: none;
 }
 
 
 body {
-  padding: 4px;
+  display: flex;
+    flex-direction: column;
+    align-items: center;
   user-select: none;
   font-size: 1.6rem;
   text-align: center;
-  font-family: monospace;
+  font-family: Nunito, monospace;
   width: 100vpw;
   height: 100vph;
-  font-weight: 400;
-  display: flex;
-  flex-direction: column;
-  gap: 0.8em;
-  align-items: center;
-  background-color: var(--background);
+  font-weight: 600;
+  background-color: var(--backgroundFocus);
   color: var(--textMain);
 
   h1 {
@@ -35,7 +38,7 @@ body {
   }
 
   header {
-    padding: 8px;
+    padding: 4px;
     user-select: none;
     display: flex;
     justify-content: end;
@@ -51,11 +54,22 @@ body {
     }
   }
   main {
-    background-color: var(--backgroundFocus);
-    padding: 4px 64px 24px;
-    width: max-content;
-    height: max-content;
-    border-radius: 0.8em;
+    border-radius: 0.2em;
+    background-color: var(--background);
+    padding: 8px;
+    width: 90dvw;
+    height: 82dvh;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8em;
+    align-items: center;
+    .Timer {
+      background-color: var(--backgroundFocus);
+      padding: 16px;
+      width: 10em;
+      height: max-content;
+      border-radius: 0.8rem
+    }
   }
 
   span {
