Changed location of assets, updated filepath on .css

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: Nunito; /* set name */
-  src: url("/src-tauri/fonts/Nunito.ttf");
+  src: url("/src/assets/fonts/Nunito.ttf");
 }
 
 #StopTimer {
