--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
 :root {
-  --background: #ebeeea;
-  --backgroundFocus: #fbfefa;
+  --background: #f5fff5dd;
+  --backgroundFocus: #edfde9cd;
   --accent: #f24343;
+  --secondAccent: #c8303d;
   --secondary: #64cb41;
-  --textMain: #6a9d5b;
+  --textMain: #3a7427;
   --border: var(--textMain);
 }
 
@@ -17,14 +18,14 @@
 }
 
 @keyframes bounce {
-  from { transform: translate3d(0, 5, 0);}
-  to { transform: translate3d(0, -15px, 0);}
+  from { 
+    transform: translate3d(0, 5, 0);
+  }
+  to { 
+    transform: translate3d(0, -15px, 0);
+  }
 }
 
-@keyframes bigger {
-  from { transform: scale(1);}
-  to { transform: scale(1.1);}
-}
 
 #Tomato {
   &:hover {
@@ -33,7 +34,7 @@
 }
 
 img {
-  width: 22%;
+  width: 24%;
   margin: 0%;
   padding: 0%;
 }
@@ -49,31 +50,44 @@ body {
   width: 100vpw;
   height: 100vph;
   font-weight: 600;
-  background-color: var(--background);
   color: var(--textMain);
-
+  background: linear-gradient(0, var(--backgroundFocus), var(--background));
+  background-attachment: fixed;
   h1 {
     font-size: 1.4rem;
     font-weight: 900;
   }
 
   header {
-    padding: 2px;
+    padding: 0;
     user-select: none;
     display: flex;
     justify-content: end;
     width: 100%;
+    margin: 0;
     #titlebar {
       width: 100%;
     }
     button {
+      border-radius: 0.9em;
       margin: 2px 8px;
+      padding: 5px 15px;
       height: min-content;
       width: min-content;
       font-weight: 800;
+      &:active { 
+      border-top-width: 0.3em;
+      }
+      &#titlebar-close {
+        border-color: var(--secondAccent);
+        background: linear-gradient(0, var(--accent), var(--accent), var(--backgroundFocus));      
+      }
     }
+  
   }
   main {
+    position: fixed;
+    top: 2em;
     border-radius: 0.2em;
     padding: 8px;
     width: 100%;
@@ -88,7 +102,6 @@ body {
       height: min-content;
       border-radius: 0.8rem;
       border: 1px solid var(--border);
-      border-bottom-width: 6px;
       box-shadow: 0px 0px 0px 2px var(--backgroundFocus);
     }
   }
@@ -101,6 +114,7 @@ body {
   }
 
   button, input {
+    background: linear-gradient(0, var(--secondary), var(--secondary), var(--backgroundFocus));
     color: var(--backgroundFocus);
     font-weight: 800;
     font-family: Nunito, monospace;
@@ -110,11 +124,13 @@ body {
     padding: 0.2em 0.8em;
     border-radius: 0.6em;
     border: 2px solid var(--border);
-    border-bottom-width: 4px;
-    box-shadow: 0px 0px 0px 2px var(--backgroundFocus);
+    border-bottom-width: 0.3em;
+    box-shadow: inset 0px 0px 0px 0.1em var(--backgroundFocus), 0px 0px 0px 0.1em var(--backgroundFocus);
     &[type=number] {
-      background-color: var(--backgroundFocus);
+      margin: 0.2em 0;
+      background: var(--background);
       color: var(--textMain);
+      border-bottom-width: 2px;
     }
 
     &.TimerSettings {
@@ -133,6 +149,10 @@ body {
     }
   }
   
+}
+
+label {
+  font-weight: 700;
 }
 
 input::-webkit-outer-spin-button,
